--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -407,6 +407,7 @@ allow 2620:7:6001::ffff:c759:e658;
 allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
+allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
