--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -202,6 +202,7 @@ set_real_ip_from 2605:6400:30:f10c:d9d4:9572:75be:cbfd;
 set_real_ip_from 2605:6400:30:f174::;
 set_real_ip_from 2605:6400:30:f174:1:1:1:1;
 set_real_ip_from 2605:6400:30:f174:1111:2222:3333:4444;
+set_real_ip_from 2605:6400:30:f174:1:2:3:4;
 set_real_ip_from 2605:6400:30:f174::42;
 set_real_ip_from 2605:6400:30:f174:42:42::;
 set_real_ip_from 2605:6400:30:f174:42:42:42:0;
