--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -149,7 +149,6 @@ allow 146.59.126.232;
 allow 146.70.164.211;
 allow 147.45.116.145;
 allow 147.45.78.34;
-allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -163,6 +162,7 @@ allow 154.213.184.105;
 allow 154.213.184.111;
 allow 154.213.184.17;
 allow 154.213.184.21;
+allow 154.213.184.39;
 allow 154.213.184.42;
 allow 154.213.184.5;
 allow 154.213.184.7;
@@ -196,7 +196,6 @@ allow 163.5.143.76;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
-allow 168.100.10.41;
 allow 171.25.193.20;
 allow 171.25.193.234;
 allow 171.25.193.235;
@@ -210,7 +209,6 @@ allow 172.104.176.218;
 allow 172.104.182.84;
 allow 172.104.243.155;
 allow 172.105.161.162;
-allow 172.234.120.87;
 allow 172.234.228.174;
 allow 172.81.131.110;
 allow 172.81.131.111;
@@ -222,7 +220,6 @@ allow 173.249.57.253;
 allow 173.255.198.243;
 allow 173.44.141.34;
 allow 176.118.193.33;
-allow 176.120.75.187;
 allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.227.215.50;
@@ -311,7 +308,6 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.156.172.34;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -1092,7 +1088,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
-allow 2600:3c09::f03c:95ff:fe5b:2d55;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
@@ -1738,6 +1733,7 @@ allow 2a12:dd47:8513::7;
 allow 2a12:dd47:8513::8;
 allow 2a12:dd47:8513::9;
 allow 2a12:dd47:8513::a;
+allow 2a12:dd47:8513::b;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1761,6 +1757,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.248;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1813,7 +1810,6 @@ allow 45.80.158.23;
 allow 45.80.158.27;
 allow 45.8.22.207;
 allow 45.83.104.137;
-allow 45.83.20.200;
 allow 45.84.107.182;
 allow 45.84.107.198;
 allow 45.84.107.76;
@@ -1928,6 +1924,7 @@ allow 77.91.86.95;
 allow 77.91.87.79;
 allow 78.142.18.219;
 allow 79.124.8.241;
+allow 79.137.198.213;
 allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -2037,4 +2034,5 @@ allow 95.142.161.63;
 allow 95.143.193.125;
 allow 95.211.244.28;
 allow 96.126.98.146;
+allow 96.66.15.152;
 allow 98.128.173.33;
