--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -128,7 +128,6 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c00::f03c:95ff:fe5d:8f00;
 deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:95ff:fe5d:562;
-deny 2600:3c09::f03c:95ff:fe5b:2d55;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
@@ -773,4 +772,5 @@ deny 2a12:dd47:8513::7;
 deny 2a12:dd47:8513::8;
 deny 2a12:dd47:8513::9;
 deny 2a12:dd47:8513::a;
+deny 2a12:dd47:8513::b;
 deny 2a13:d207:0:461::1;
