--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -149,7 +149,6 @@ set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.70.164.211;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
-set_real_ip_from 147.78.67.73;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -163,6 +162,7 @@ set_real_ip_from 154.213.184.105;
 set_real_ip_from 154.213.184.111;
 set_real_ip_from 154.213.184.17;
 set_real_ip_from 154.213.184.21;
+set_real_ip_from 154.213.184.39;
 set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.5;
 set_real_ip_from 154.213.184.7;
@@ -196,7 +196,6 @@ set_real_ip_from 163.5.143.76;
 set_real_ip_from 164.132.172.209;
 set_real_ip_from 165.73.242.163;
 set_real_ip_from 166.70.207.2;
-set_real_ip_from 168.100.10.41;
 set_real_ip_from 171.25.193.20;
 set_real_ip_from 171.25.193.234;
 set_real_ip_from 171.25.193.235;
@@ -210,7 +209,6 @@ set_real_ip_from 172.104.176.218;
 set_real_ip_from 172.104.182.84;
 set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.105.161.162;
-set_real_ip_from 172.234.120.87;
 set_real_ip_from 172.234.228.174;
 set_real_ip_from 172.81.131.110;
 set_real_ip_from 172.81.131.111;
@@ -222,7 +220,6 @@ set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 173.44.141.34;
 set_real_ip_from 176.118.193.33;
-set_real_ip_from 176.120.75.187;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.227.215.50;
@@ -311,7 +308,6 @@ set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.156.172.34;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
@@ -1092,7 +1088,6 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
-set_real_ip_from 2600:3c09::f03c:95ff:fe5b:2d55;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
@@ -1738,6 +1733,7 @@ set_real_ip_from 2a12:dd47:8513::7;
 set_real_ip_from 2a12:dd47:8513::8;
 set_real_ip_from 2a12:dd47:8513::9;
 set_real_ip_from 2a12:dd47:8513::a;
+set_real_ip_from 2a12:dd47:8513::b;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
@@ -1761,6 +1757,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1813,7 +1810,6 @@ set_real_ip_from 45.80.158.23;
 set_real_ip_from 45.80.158.27;
 set_real_ip_from 45.8.22.207;
 set_real_ip_from 45.83.104.137;
-set_real_ip_from 45.83.20.200;
 set_real_ip_from 45.84.107.182;
 set_real_ip_from 45.84.107.198;
 set_real_ip_from 45.84.107.76;
@@ -1928,6 +1924,7 @@ set_real_ip_from 77.91.86.95;
 set_real_ip_from 77.91.87.79;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.124.8.241;
+set_real_ip_from 79.137.198.213;
 set_real_ip_from 80.210.78.252;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
@@ -2037,4 +2034,5 @@ set_real_ip_from 95.142.161.63;
 set_real_ip_from 95.143.193.125;
 set_real_ip_from 95.211.244.28;
 set_real_ip_from 96.126.98.146;
+set_real_ip_from 96.66.15.152;
 set_real_ip_from 98.128.173.33;
