--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -128,7 +128,6 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c00::f03c:95ff:fe5d:8f00;
 set_real_ip_from 2600:3c03::f03c:91ff:fe24:47be;
 set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
-set_real_ip_from 2600:3c09::f03c:95ff:fe5b:2d55;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
@@ -773,4 +772,5 @@ set_real_ip_from 2a12:dd47:8513::7;
 set_real_ip_from 2a12:dd47:8513::8;
 set_real_ip_from 2a12:dd47:8513::9;
 set_real_ip_from 2a12:dd47:8513::a;
+set_real_ip_from 2a12:dd47:8513::b;
 set_real_ip_from 2a13:d207:0:461::1;
