--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -149,6 +149,7 @@ allow 146.59.126.232;
 allow 146.70.164.211;
 allow 147.45.116.145;
 allow 147.45.78.34;
+allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -548,6 +549,7 @@ allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
+allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.132;
@@ -1062,7 +1064,6 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.4;
-allow 23.155.8.104;
 allow 23.173.216.67;
 allow 23.184.48.13;
 allow 23.94.211.25;
@@ -1091,7 +1092,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
-allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1454,6 +1454,7 @@ allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
+allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1757,7 +1758,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.248;
+allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1851,6 +1852,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -2011,14 +2013,12 @@ allow 93.99.104.18;
 allow 93.99.104.194;
 allow 93.99.104.40;
 allow 94.102.51.15;
-allow 94.131.3.2;
 allow 94.131.99.4;
 allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.143.231.53;
 allow 94.16.115.121;
 allow 94.16.116.81;
-allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.177.106.247;
 allow 94.177.106.54;
