--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -149,6 +149,7 @@ set_real_ip_from 146.59.126.232;
 set_real_ip_from 146.70.164.211;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
+set_real_ip_from 147.78.67.73;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -548,6 +549,7 @@ set_real_ip_from 185.254.196.141;
 set_real_ip_from 185.34.33.2;
 set_real_ip_from 185.35.202.222;
 set_real_ip_from 185.38.175.133;
+set_real_ip_from 185.39.207.83;
 set_real_ip_from 185.40.4.100;
 set_real_ip_from 185.40.4.101;
 set_real_ip_from 185.40.4.132;
@@ -1062,7 +1064,6 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.173.216.67;
 set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.94.211.25;
@@ -1091,7 +1092,6 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1454,6 +1454,7 @@ set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:541:121:33::1;
+set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
@@ -1757,7 +1758,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.248;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1851,6 +1852,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -2011,14 +2013,12 @@ set_real_ip_from 93.99.104.18;
 set_real_ip_from 93.99.104.194;
 set_real_ip_from 93.99.104.40;
 set_real_ip_from 94.102.51.15;
-set_real_ip_from 94.131.3.2;
 set_real_ip_from 94.131.99.4;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.143.231.53;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
-set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.247;
 set_real_ip_from 94.177.106.54;
