--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -164,6 +164,7 @@ allow 154.213.184.105;
 allow 154.213.184.111;
 allow 154.213.184.17;
 allow 154.213.184.21;
+allow 154.213.184.35;
 allow 154.213.184.39;
 allow 154.213.184.42;
 allow 154.213.184.5;
@@ -178,6 +179,7 @@ allow 154.213.185.185;
 allow 154.213.185.230;
 allow 154.213.185.254;
 allow 154.26.159.157;
+allow 157.254.252.117;
 allow 160.119.249.240;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -561,6 +563,7 @@ allow 185.40.4.150;
 allow 185.40.4.29;
 allow 185.40.4.38;
 allow 185.40.4.44;
+allow 185.40.4.64;
 allow 185.40.4.92;
 allow 185.40.4.94;
 allow 185.40.4.95;
@@ -713,7 +716,6 @@ allow 199.195.250.18;
 allow 199.195.250.46;
 allow 199.195.251.119;
 allow 199.195.251.148;
-allow 199.195.251.175;
 allow 199.195.251.78;
 allow 199.195.253.124;
 allow 199.195.253.156;
@@ -949,7 +951,6 @@ allow 204.8.96.87;
 allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
-allow 205.185.114.243;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.119.35;
@@ -1682,6 +1683,7 @@ allow 2a0e:4005:1002:ffff:185:40:4:149;
 allow 2a0e:4005:1002:ffff:185:40:4:29;
 allow 2a0e:4005:1002:ffff:185:40:4:38;
 allow 2a0e:4005:1002:ffff:185:40:4:44;
+allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
@@ -1694,7 +1696,6 @@ allow 2a0e:fa00:0:1b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:89c::1;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
 allow 2a0f:df00:0:255::194;
 allow 2a0f:df00:0:255::195;
@@ -1743,6 +1744,7 @@ allow 2a12:dd47:8513::8;
 allow 2a12:dd47:8513::9;
 allow 2a12:dd47:8513::a;
 allow 2a12:dd47:8513::b;
+allow 2a12:dd47:8513::c;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1766,7 +1768,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1826,7 +1827,6 @@ allow 45.9.148.113;
 allow 45.94.31.180;
 allow 45.94.31.68;
 allow 45.95.169.130;
-allow 45.95.169.152;
 allow 45.95.169.223;
 allow 45.95.169.224;
 allow 45.95.169.225;
@@ -1860,7 +1860,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1946,6 +1945,7 @@ allow 81.16.33.42;
 allow 81.17.28.95;
 allow 82.153.138.119;
 allow 8.218.9.41;
+allow 82.221.139.190;
 allow 82.85.247.254;
 allow 83.217.208.120;
 allow 83.217.9.73;
@@ -1978,7 +1978,6 @@ allow 89.147.111.124;
 allow 89.185.85.140;
 allow 89.187.143.31;
 allow 89.208.240.78;
-allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
