--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -717,6 +717,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:149;
 deny 2a0e:4005:1002:ffff:185:40:4:29;
 deny 2a0e:4005:1002:ffff:185:40:4:38;
 deny 2a0e:4005:1002:ffff:185:40:4:44;
+deny 2a0e:4005:1002:ffff:185:40:4:64;
 deny 2a0e:4005:1002:ffff:185:40:4:92;
 deny 2a0e:4005:1002:ffff:185:40:4:94;
 deny 2a0e:4005:1002:ffff:185:40:4:95;
@@ -729,7 +730,6 @@ deny 2a0e:fa00:0:1b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:89c::1;
-deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -778,4 +778,5 @@ deny 2a12:dd47:8513::8;
 deny 2a12:dd47:8513::9;
 deny 2a12:dd47:8513::a;
 deny 2a12:dd47:8513::b;
+deny 2a12:dd47:8513::c;
 deny 2a13:d207:0:461::1;
