--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -147,7 +147,6 @@ allow 143.110.156.176;
 allow 144.172.118.4;
 allow 144.172.118.55;
 allow 146.59.126.232;
-allow 146.70.164.211;
 allow 147.45.116.145;
 allow 147.45.78.34;
 allow 147.78.67.73;
@@ -232,7 +231,6 @@ allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
-allow 178.162.201.169;
 allow 178.17.170.144;
 allow 178.17.170.223;
 allow 178.17.170.23;
@@ -260,7 +258,6 @@ allow 179.43.159.199;
 allow 179.43.159.200;
 allow 179.43.159.201;
 allow 179.43.159.78;
-allow 179.43.167.196;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 179.55.71.119;
@@ -575,7 +572,6 @@ allow 185.7.33.146;
 allow 185.82.219.109;
 allow 188.165.200.97;
 allow 188.214.104.21;
-allow 188.244.106.82;
 allow 188.253.7.106;
 allow 188.68.36.28;
 allow 188.68.41.191;
@@ -1029,6 +1025,7 @@ allow 23.129.64.228;
 allow 23.129.64.229;
 allow 23.129.64.230;
 allow 23.137.248.100;
+allow 23.137.248.152;
 allow 23.137.250.83;
 allow 23.137.253.108;
 allow 23.137.253.109;
@@ -1098,6 +1095,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:a378::1;
@@ -1669,7 +1667,6 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
-allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:34cd::1;
 allow 2a0d:bbc7:0:1::254;
@@ -1768,6 +1765,8 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.248;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1814,6 +1813,7 @@ allow 45.66.35.32;
 allow 45.66.35.33;
 allow 45.66.35.34;
 allow 45.66.35.35;
+allow 45.78.44.215;
 allow 45.79.144.222;
 allow 45.80.158.205;
 allow 45.80.158.23;
@@ -1955,7 +1955,6 @@ allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
 allow 85.17.9.83;
-allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.205.5.107;
 allow 87.118.110.27;
@@ -1969,7 +1968,6 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
-allow 88.99.249.117;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
@@ -1977,7 +1975,6 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.185.85.140;
 allow 89.187.143.31;
-allow 89.208.240.78;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
@@ -2028,6 +2025,7 @@ allow 94.142.244.16;
 allow 94.143.231.53;
 allow 94.16.115.121;
 allow 94.16.116.81;
+allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.177.106.247;
 allow 94.177.106.54;
