--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -143,7 +143,6 @@ deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
-deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
@@ -761,9 +760,12 @@ deny 2a12:5940:b4dd::2;
 deny 2a12:5940:c826::2;
 deny 2a12:5940:f0a8::2;
 deny 2a12:a800:1:1:194:26:192:161;
+deny 2a12:a800:1:1:194:26:192:77;
 deny 2a12:a800:2:1:185:241:208:115;
+deny 2a12:a800:2:1:185:241:208:71;
 deny 2a12:a800:2:1:185:241:208:81;
 deny 2a12:a800:2:1:45:138:16:178;
+deny 2a12:a800:2:1:45:138:16:222;
 deny 2a12:a800:2:1:45:141:215:116;
 deny 2a12:bec4:11d3:de9f::1;
 deny 2a12:d8c0:109a:9001::7;
